--- a/invite/index.html
+++ b/invite/index.html
@@ -124,7 +124,7 @@
 </div>
 </section>
 
-<section class="ftco-section ftco-love" id="lovestory-section" style="background-image: url(images/bg2.jpg);">
+<section class="ftco-section ftco-love" id="lovestory-section" style="background-image: url(images/bg2.jpg); background-size:cover;">
  <div class="container">
   <div class="row justify-content-center pb-5">
     <div class="col-md-12 text-center heading-section ftco-animate">
