--- a/invite/index.html
+++ b/invite/index.html
@@ -39,7 +39,7 @@
    </div>
  </nav>
 
- <section id="home" class="herowrap js-fullheight" style="height: 700px; background-image: url(images/bg.jpeg); background-size:cover; background-position: 50% 25%;" data-stellar-background-ratio="0.5">
+ <section id="home" class="herowrap js-fullheight" style="height: 700px; background-image: url(images/bg.jpeg); background-size:cover; background-position: 50% 25%; background-repeat:no-repeat;" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row js-fullheight justify-content-center d-flex align-items-center">
