--- a/invite/index.html
+++ b/invite/index.html
@@ -39,7 +39,7 @@
    </div>
  </nav>
 
- <section id="home" class="herowrap js-fullheight" style="height: 700px; background-image: url(images/bg.jpeg); background-size:cover; background-position: 50% 25%; background-repeat:no-repeat;" data-stellar-background-ratio="0.5">
+ <section id="home" class="herowrap js-fullheight" style="height: 700px; background-image: url(images/bg.jpeg); background-size:cover; background-position: top center; background-repeat:no-repeat;" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row js-fullheight justify-content-center d-flex align-items-center">
@@ -124,7 +124,7 @@
 </div>
 </section>
 
-<section class="ftco-section ftco-love" id="lovestory-section" style="background-image: url(images/bg2.jpg); background-size:cover;">
+<section class="ftco-section ftco-love" id="lovestory-section" style="background-image: url(images/bg2.jpg);">
  <div class="container">
   <div class="row justify-content-center pb-5">
     <div class="col-md-12 text-center heading-section ftco-animate">
