--- a/invite/index.html
+++ b/invite/index.html
@@ -183,9 +183,9 @@
 <section class="ftco-section ftco-no-pt ftco-no-pb bg-light" id="when-where-section">
  <div class="container">
   <div class="row">
-   <div class=" ftco-animate d-flex" hidden>
+   <!--<div class=" ftco-animate d-flex" hidden>
     <div id="map" class="bg-white"></div>
-  </div>
+  </div>-->
   <div class=" py-5 pl-md-5">
     <div class="row py-md-4">
      <div class="col-md-12 text-center heading-section pb-4 ftco-animate">
