--- a/invite/index.html
+++ b/invite/index.html
@@ -49,7 +49,7 @@
          <span class="flaticon-diamond-ring"></span>
        </div>
        <h1>Vijay &amp; Rajee</h1>
-       <span class="subheading">We Are Getting Married</span>
+       <span id="change-txt"><span class="subheading">We Are Getting Married</span></span>
      </div>
    </div>
  </div>
