--- a/invite/index.html
+++ b/invite/index.html
@@ -100,7 +100,7 @@
     <div class="bride-groom ftco-animate d-md-flex">
      <div class="img order-md-last ml-md-5" style="background-image: url(images/groom.jpeg);"></div>
      <div class="text text-md-right pl-md-5 mr-md-5">
-      <h2>Vijay Kandeepan</h2>
+      <h2>Vijay K</h2>
       <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
       <div class="icon icon-right">
        <span class="flaticon-dove-1"></span>
