--- a/invite/index.html
+++ b/invite/index.html
@@ -47,7 +47,7 @@
       <div class="text text-center">
        <div class="icon d-flex align-items-center justify-content-center">
        </div>
-       <h1>Vijay &amp; Rajee</h1>
+       <h1>Rajee &amp; Vijay</h1>
        <span id="change-txt"><span class="subheading">We Are Getting Married</span></span>
      </div>
    </div>
@@ -78,7 +78,7 @@
         <h2>Dum Dum Dum!!</h2>
         <div>
           <p>With the beats of Mangala vadhyam and chants of traditional mantras, We are starting our journey.</p>
-          <p>On this special Day, we are expecting you to be a part of this occasion.</p>
+          <p>On this special Day, we are expecting your presence, we also want you to be a part of this.</p>
           <h2>15<sup>th</sup> February 2021.</h2>
         </div>
       </div>
