--- a/invite/index.html
+++ b/invite/index.html
@@ -78,7 +78,7 @@
         <h2>Dum Dum Dum!!</h2>
         <div>
           <p>With the beats of Mangala vadhyam and chants of traditional mantras, We are starting our journey.</p>
-          <p>On this special Day, we are expecting your presence, we also want you to be a part of this.</p>
+          <p>On this special Day, we are expecting your presence.</p>
           <h2>15<sup>th</sup> February 2021.</h2>
         </div>
       </div>
