--- a/invite/index.html
+++ b/invite/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="css/flaticon.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">  
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light site-navbar-target" id="ftco-navbar">
    <div class="container">
      <a class="navbar-brand" href="index.html">Rajee &amp; Vijay</a>
@@ -112,7 +112,8 @@
    <div class="img mr-md-5" style="background-image: url(images/bride.jpeg);"></div>
    <div class="text ml-md-5 pr-md-5">
     <h2>Rajee Chandran</h2>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+    <p>Love marriage around the world are simple ,but ours is difficult..
+      We love each other.My family has to like him and his family should like me and after that our both familes should like each other. Still we where in love with each other. Finally we are getting married...</p>
     <div class="icon icon-left">
      <span class="flaticon-dove-1"></span>
    </div>
@@ -139,11 +140,11 @@
       <div class="timeline-panel ftco-animate text-md-right">
        <div class="icon icon-left"><span class="flaticon-dove-1"></span></div>
        <div class="timeline-heading">
-        <span class="date">June 10, 2017</span>
+        <span class="date">December 28, 2014</span>
         <h3 class="timeline-title">First We Meet</h3>
       </div>
       <div class="timeline-body">
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in .</p>
+        <p>When we first met we had no idea that we would share a special bond of being together for life long.</p>
       </div>
     </div>
   </li>
@@ -152,11 +153,11 @@
   <div class="timeline-panel ftco-animate ">
    <div class="icon icon-right"><span class="flaticon-dove-1"></span></div>
    <div class="timeline-heading">
-    <span class="date">June 14, 2017</span>
+    <span class="date">January 18, 2015</span>
     <h3 class="timeline-title">In A Relationship</h3>
   </div>
   <div class="timeline-body">
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in .</p>
+    <p>Being in a relationship with some one is easy but maintaining that love for a long period of time with the same person with the same spark as before is what we have.</p>
   </div>
 </div>
 </li>
@@ -165,11 +166,11 @@
   <div class="timeline-panel ftco-animate text-md-right">
    <div class="icon icon-left"><span class="flaticon-dove-1"></span></div>
    <div class="timeline-heading">
-    <span class="date">May. 10, 2019</span>
+    <span class="date">September 20, 2020</span>
     <h3 class="timeline-title">We're Engaged</h3>
   </div>
   <div class="timeline-body">
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in .</p>
+    <p>Finally after a lot of struggle and fights we got 'YES' from our parents...Yeah finally we are engaged!!</p>
   </div>
 </div>
 </li>
@@ -316,8 +317,12 @@
 </div>
 </footer>
 
-<!-- loader -->
-<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
+<!-- loader 
+<div id="ftco-loader" class="show fullscreen"><img src="images\preloader.gif" id="preloader_image" alt="loader"></div>-->
+<div id="preloader">
+	<div id="status"><img src="images/header/preloader.gif" id="preloader_image" alt="loader">
+	</div>
+</div>
 
 
 <script src="js/jquery.min.js"></script>
