--- a/invite/index.html
+++ b/invite/index.html
@@ -100,7 +100,7 @@
      <div class="img order-md-last ml-md-5" style="background-image: url(images/groom.jpeg);"></div>
      <div class="text text-md-right pl-md-5 mr-md-5">
       <h2>Vijay K</h2>
-      <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+      <p>The best and most beautiful things in the world cannot be seen or even heard but must be felt with the heart like the love I have for you.</p>
       <div class="icon icon-right">
        <span class="flaticon-dove-1"></span>
      </div>
@@ -317,12 +317,10 @@
 </div>
 </footer>
 
-<!-- loader 
-<div id="ftco-loader" class="show fullscreen"><img src="images\preloader.gif" id="preloader_image" alt="loader"></div>-->
-<div id="preloader">
-	<div id="status"><img src="images/header/preloader.gif" id="preloader_image" alt="loader">
-	</div>
-</div>
+<!-- loader -->
+<div id="ftco-loader" class="show fullscreen"><img src="images\preloader.gif" id="preloader_image" alt="loader"></div>
+
+
 
 
 <script src="js/jquery.min.js"></script>
