--- a/invite/index.html
+++ b/invite/index.html
@@ -100,7 +100,7 @@
      <div class="img order-md-last ml-md-5" style="background-image: url(images/groom.jpeg);"></div>
      <div class="text text-md-right pl-md-5 mr-md-5">
       <h2>Vijay K</h2>
-      <p>The best and most beautiful things in the world cannot be seen or even heard but must be felt with the heart like the love I have for you.</p>
+      <p>Falling in love is easy...but staying in love is very special.We had many ups and down and even we where mad at each other and we struggled a lot for our love.. Finally our dream has come true, yeah it worth the wait. Yes we are getting married.</p>
       <div class="icon icon-right">
        <span class="flaticon-dove-1"></span>
      </div>
