--- a/invite/index.html
+++ b/invite/index.html
@@ -77,7 +77,7 @@
         <span class="subheading">Getti Melam</span>
         <h2>Dum Dum Dum!!</h2>
         <div>
-          <p>With the beats of Mangala vadhyam and chants of traditional mantras, We are starting our journey.</p>
+          <p>With the beats of Mangala vadhyam and chants of traditional mantras, We are begining our journey.</p>
           <p>On this special Day, we are expecting your presence.</p>
           <h2>15<sup>th</sup> February 2021.</h2>
         </div>
@@ -100,7 +100,7 @@
      <div class="img order-md-last ml-md-5" style="background-image: url(images/groom.jpeg);"></div>
      <div class="text text-md-right pl-md-5 mr-md-5">
       <h2>Vijay K</h2>
-      <p>Falling in love is easy...but staying in love is very special.We had many ups and down and even we where mad at each other and we struggled a lot for our love.. Finally our dream has come true, yeah it worth the wait. Yes we are getting married.</p>
+      <p>Falling in love is easy...but staying in love is very special.We had many ups and downs and even we were mad at each other and we struggled a lot for our love.. Finally our dream has come true, yeah it's worth the wait. Yes we are getting married.</p>
       <div class="icon icon-right">
        <span class="flaticon-dove-1"></span>
      </div>
@@ -112,8 +112,8 @@
    <div class="img mr-md-5" style="background-image: url(images/bride.jpeg);"></div>
    <div class="text ml-md-5 pr-md-5">
     <h2>Rajee Chandran</h2>
-    <p>Love marriage around the world are simple ,but ours is difficult..
-      We love each other.My family has to like him and his family should like me and after that our both familes should like each other. Still we where in love with each other. Finally we are getting married...</p>
+    <p>Love marriage around the world are simple ,but our story is difficult..
+      We love each other.My family has to like him and his family should like me and after that our both familes should like each other, still we are in love with each other. Finally here we are getting married...</p>
     <div class="icon icon-left">
      <span class="flaticon-dove-1"></span>
    </div>
@@ -141,7 +141,7 @@
        <div class="icon icon-left"><span class="flaticon-dove-1"></span></div>
        <div class="timeline-heading">
         <span class="date">December 28, 2014</span>
-        <h3 class="timeline-title">First We Meet</h3>
+        <h3 class="timeline-title">First We Met</h3>
       </div>
       <div class="timeline-body">
         <p>When we first met we had no idea that we would share a special bond of being together for life long.</p>
