--- a/invite/index.html
+++ b/invite/index.html
@@ -283,7 +283,7 @@
     <div class="col-md">
       <div class="ftco-footer-widget mb-4">
         <h2 class="ftco-heading-2">Rajee &amp; Vijay</h2>
-        <p>We invite you to celebrate our wedding, Your presence will be the best present.</p>
+        <p>Come for the love, stay for the party.</p>
       </div>
     </div>
     <div class="col-md">
