--- a/invite/index.html
+++ b/invite/index.html
@@ -48,7 +48,7 @@
        <div class="icon d-flex align-items-center justify-content-center">
        </div>
        <h1>Rajee &amp; Vijay</h1>
-       <span id="change-txt"><span class="subheading">We Are Getting Married</span></span>
+       <span id="change-txt"><span class="subheading">We Are Getting <span class="mobile-show">Married</span></span></span>
      </div>
    </div>
  </div>
