--- a/invite/index.html
+++ b/invite/index.html
@@ -186,8 +186,8 @@
    <!--<div class=" ftco-animate d-flex" hidden>
     <div id="map" class="bg-white"></div>
   </div>-->
-  <div class=" py-5 pl-md-5">
-    <div class="row py-md-4">
+  <div class=" py-5 pl-md-5" style=" width: 100%;">
+    <div class="row py-md-4" style=" width: 100%;">
      <div class="col-md-12 text-center heading-section pb-4 ftco-animate">
        <span class="subheading">Planning</span>
        <h2 class="mb-3">When &amp; Where</h2>
