--- a/invite/index.html
+++ b/invite/index.html
@@ -48,7 +48,7 @@
        <div class="icon d-flex align-items-center justify-content-center">
        </div>
        <h1>Rajee &amp; Vijay</h1>
-       <span id="change-txt"><span class="subheading">We Are Getting <span class="mobile-show">Married</span></span></span>
+       <span class="subheading">We Are Married</span>
      </div>
    </div>
  </div>
@@ -59,12 +59,8 @@
  <div class="container">
   <div class="row justify-content-center">
    <div class="col-md-12">
-    <div id="timer" class="d-sm-flex">
-     <div class="time time-2 d-flex align-items-center text-center"><h3 class="w-100">Save <br>the Day</h3></div>
-     <div class="time" id="days"></div>
-     <div class="time" id="hours"></div>
-     <div class="time" id="minutes"></div>
-     <div class="time" id="seconds"></div>
+    <div class="d-sm-flex">
+     <h2 class='txt-mrg'>Thanks For Celebrating with us!!</h2>
    </div>
  </div>
 </div>
