--- a/invite/index.html
+++ b/invite/index.html
@@ -59,7 +59,7 @@
  <div class="container">
   <div class="row justify-content-center">
    <div class="col-md-12">
-    <div class="d-sm-flex">
+    <div id="timer" class="d-sm-flex">
      <h2 class='txt-mrg'>Thanks For Celebrating with us!!</h2>
    </div>
  </div>
